[package]
name = "phrase"
version = "0.1.1"
description = "A passphrase generator: no-config, 128-bit security, memorable, & built-in simplified English word list."
authors = ["Nate Wilcox <nathan+dev@electriccoin.co>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
